--- a/Documentation/config/Informationen.tex
+++ b/Documentation/config/Informationen.tex
@@ -11,9 +11,9 @@
 % Descripton : File with all Information about the Document
 %======================================================================
 
-\newcommand{\Autor}{Max Mustermann}
+\newcommand{\Autor}{Danny Kroll}
 \newcommand{\MatrikelNummer}{4711}
-\newcommand{\Kursbezeichnung}{tinf17b3}
+\newcommand{\Kursbezeichnung}{TINF19B4}
 
 \newcommand{\FirmenLogoDeckblatt}{\includegraphics[width=2cm]{./config/layout/bonkpartners}}
 
@@ -33,8 +33,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\Titel}{\LaTeX-Vorlage für diverse Ausarbeitungen .. oder so ähnlich}
-\newcommand{\AbgabeDatum}{1. April 2090}
+\newcommand{\Titel}{Manga Collector}
+\newcommand{\AbgabeDatum}{15. Mai 2022}
 
 \newcommand{\Dauer}{5. \& 6. Semester}
 
