--- a/Documentation/config/Informationen.tex
+++ b/Documentation/config/Informationen.tex
@@ -12,7 +12,7 @@
 %======================================================================
 
 \newcommand{\Autor}{Danny Kroll}
-\newcommand{\MatrikelNummer}{4711}
+\newcommand{\MatrikelNummer}{7044515}
 \newcommand{\Kursbezeichnung}{TINF19B4}
 
 \newcommand{\FirmenLogoDeckblatt}{\includegraphics[width=2cm]{./config/layout/bonkpartners}}
